tests/it/ui/debug_not_field.stderr
error[E0277]: the trait bound `NoDebug: debug3::Debug` is not satisfied
 --> tests/it/ui/debug_not_field.rs:3:10
  |
3 | #[derive(debug3::Debug)]
  |          ^^^^^^^^^^^^^ the trait `debug3::Debug` is not implemented for `NoDebug`
  |
  = help: the following other types implement trait `debug3::Debug`:
            bool
            char
            isize
            i8
            i16
            i32
            i64
            i128
          and $N others
  = note: required for the cast from `&NoDebug` to `&dyn debug3::Debug`
  = note: this error originates in the derive macro `debug3::Debug` (in Nightly builds, run with -Z macro-backtrace for more info)
